# ppgmne-prj-prf

./: .gitignore  Makefile  README.md  pyproject.toml
data/prf/: PR.kml  accidents.json  transformations.json
ppgmne_prj_prf/: __init__.py  optim.py  utils.py
ppgmne_prj_prf/config/: params.py  paths.py
ppgmne_prj_prf/database/: accidents.py  bases.py  stations.py  utils.py
ppgmne_prj_prf/model/: accidents.py  point.py  points.py  quadrants.py  stations.py  utils.py
