[tool.poetry]
name = "ppgmne-prj-prf"
version = "0.1.0"
description = ""
authors = ["António Júnior <juniorssz@gmail.com>"]
readme = "README.md"
packages = [{include = "ppgmne_prj_prf"}]

[tool.poetry.dependencies]
python = "^3.9"
Pyomo = "^6.4.2"
gurobipy = "^9.5.2"
pandas = "^1.4.4"
pandera = "^0.12.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
