[tool.poetry]
name = "ppgmne-prj-prf"
version = "0.1.0"
description = ""
authors = ["António Júnior <juniorssz@gmail.com>"]
readme = "README.md"
packages = [{include = "ppgmne_prj_prf"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Pyomo = "^6.4.2"
gurobipy = "^9.5.2"
pandas = "^1.4.4"
pandera = "^0.12.0"
loguru = "^0.6.0"
Unidecode = "^1.3.4"
Shapely = "^1.8.4"
haversine = "^2.7.0"
scipy = "^1.9.1"
kml2geojson = "^5.1.0"
holidays = "^0.16"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.3"
black = "^22.8.0"
isort = "^5.10.1"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
geopandas = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
